Added receipts for customer orders and checkout button.
Co-authored-by: stefanescuowen-cmd <stefanescuowen-cmd@users.noreply.github.com>

--- a/Wacky/About/index.html
+++ b/Wacky/About/index.html
@@ -8,7 +8,7 @@
 
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-        <title>Wacky Burger - Home</title>
+        <title>Wacky Burger - About</title>
 
         <link rel="stylesheet" type="text/css" href="../../StyleSheets/imports.css">
         <link rel="stylesheet" type="text/css" href="../../StyleSheets/animations.css">
@@ -43,6 +43,8 @@
 
                     <li><a class="CurrentlyOn" onclick="SmartHref('About')">About</a></li>
 
+                    <li id="CheckoutBtn"><a onclick="SmartCheckout()">Checkout</a></li>
+
                     <li id="ManageLink"><a onclick="SmartHref('Manage')">Manage</a></li>
 
                     <li><a id="logInOutButton" onclick="LogInOut(); SmartHref('Login')">Login</a></li>
@@ -68,6 +70,8 @@
                 <li><a onclick="SmartHref('Menu')">Menu</a></li>
 
                 <li><a class="CurrentlyOn" onclick="SmartHref('About')">About</a></li>
+
+                <li id="CheckoutBtn"><a onclick="SmartCheckout()">Checkout</a></li>
 
                 <li id="ManageLink2"><a onclick="SmartHref('Manage')">Manage</a></li>
 
@@ -119,7 +123,7 @@
                                 Serving up burgers to people that wanted them.
                                 The burgers were grilled and made carefully.
                                 But basically Wacky Burger originated from Texas,
-                                Founded by <strong>John Wacky Sr.</strong>.
+                                Founded by <strong>John Wacky Sr.</strong>
                                 His first food item he ever made. <em>Wacky Burger Jr.</em>
                                 Was a success. Then he proceeded to make French Fries like no other place could do.
                                 You can say they are Freaking good french fries.
@@ -148,7 +152,7 @@
                                 <br>
                                 Eventually he grew older. Dawned a cowboy hat.
                                 And wanted to make the burger he grew up with.
-                                He wanted to share his knowlage, the taste,
+                                He wanted to share his knowledge, the taste,
                                 and wackyness that a burger can have.
                             </p>
 
@@ -156,9 +160,9 @@
 
                         
 
-                        <div class="aboutRow">
+                        <h3>What Our Food Is About</h3>
 
-                            <h3>What Our Food Is About</h3>
+                        <div class="aboutRow">
 
                             <div class="flex3 about-style">
 
@@ -209,8 +213,6 @@
                                 </p>
 
                             </div>
-
-                            <div class="flex1"></div>
 
                             <div class="flex3 about-style">
 
