--- a/Wacky/Manage/index.html
+++ b/Wacky/Manage/index.html
@@ -40,7 +40,9 @@
 
                     <li><a onclick="SmartHref('About')">About</a></li>
 
-                    <li class="CurrentlyOn" id="ManageLink"><a onclick="SmartHref('Manage')">Manage</a></li>
+                    <li id="CheckoutBtn"><a onclick="SmartCheckout()">Checkout</a></li>
+
+                    <li id="ManageLink"><a class="CurrentlyOn" onclick="SmartHref('Manage')">Manage</a></li>
 
                     <li><a id="logInOutButton" onclick="LogInOut(); SmartHref('Login')">Login</a></li>
 
@@ -66,7 +68,9 @@
 
                 <li><a onclick="SmartHref('About')">About</a></li>
 
-                <li class="CurrentlyOn" id="ManageLink2"><a onclick="SmartHref('Manage')">Manage</a></li>
+                <li id="CheckoutBtn"><a onclick="SmartCheckout()">Checkout</a></li>
+
+                <li id="ManageLink2"><a class="CurrentlyOn" onclick="SmartHref('Manage')">Manage</a></li>
 
                 <li><a id="logInOutButton2" onclick="LogInOut(); SmartHref('Login')">Login</a></li>
 
