--- a/Wacky/Receipt/index.html
+++ b/Wacky/Receipt/index.html
@@ -35,6 +35,8 @@
                     <li><a onclick="SmartHref('Menu')">Menu</a></li>
 
                     <li><a onclick="SmartHref('About')">About</a></li>
+                    
+                    <li id="CheckoutBtn"><a onclick="SmartCheckout()">Checkout</a></li>
 
                     <li id="ManageLink"><a onclick="SmartHref('Manage')">Manage</a></li>
 
@@ -61,6 +63,8 @@
                 <li><a onclick="SmartHref('Menu')">Menu</a></li>
 
                 <li><a onclick="SmartHref('About')">About</a></li>
+
+                <li id="CheckoutBtn"><a onclick="SmartCheckout()">Checkout</a></li>
 
                 <li id="ManageLink2"><a onclick="SmartHref('Manage')">Manage</a></li>
 
