--- a/Wacky/Home/index.html
+++ b/Wacky/Home/index.html
@@ -133,6 +133,7 @@
                     <label for="email">Email:</label>
                     <input type="email" name="email" id="email" placeholder="Email" required>
 
+                    <label for="message">Message:</label>
                     <textarea name="message" id="message" cols="30" rows="10" placeholder="Message" required></textarea>
 
                     <button type="submit" id="submit">Send Message</button>
