Added progress bar and adjusted styling
Co-authored-by: stefanescuowen-cmd <stefanescuowen-cmd@users.noreply.github.com>

--- a/Wacky/Home/index.html
+++ b/Wacky/Home/index.html
@@ -122,7 +122,7 @@
 
                 <p></p>
 
-                <form action="mailto:" method="post">
+                <form id="contactForm" method="post">
 
                     <label for="first-name">First name:</label>
                     <input type="text" name="first-name" id="first-name" placeholder="First name" required>
