Made initial page redirect

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
     <body>
 
-        <script src="JavaScript/javascript.js">SmartHome()</script>
+        <script src="JavaScript/SHref.js">SmartHome()</script>
 
     </body>
 
