fixed the opening redirect

--- a/index.html
+++ b/index.html
@@ -10,7 +10,10 @@
 
     <body>
 
-        <script src="JavaScript/SHref.js">SmartHome()</script>
+        <script src="JavaScript/SHref.js"></script>
+        <script>
+            SmartHome()
+        </script>
 
     </body>
 
