Updated footer text

--- a/Wacky/Checkout/index.html
+++ b/Wacky/Checkout/index.html
@@ -187,7 +187,7 @@
 
                 <p>Copyright &copy; 2025 by Wacky Burger. All rights reserved.</p>
 
-                <p>This page was last updated on xx/xx/20xx</p>
+                <p>This page was last updated on 12/4/2025</p>
                 
             </div>
 
