--- a/Wacky/About/index.html
+++ b/Wacky/About/index.html
@@ -287,7 +287,7 @@
 
                 <li><a class="CurrentlyOn" onclick="SmartHref('About')">About</a></li>
 
-                <li><a onclick="SmartHref('Login')">Login</a></li>
+                <li><a id="LoginATag3" onclick="LogInOut(); SmartHref('Login')">Login</a></li>
 
                 <li id="ManageLink2"><a onclick="SmartHref('Manage')">Manage</a></li>
 
