--- a/Wacky/Receipt/index.html
+++ b/Wacky/Receipt/index.html
@@ -94,7 +94,7 @@
 
                 <li><a onclick="SmartHref('About')">About</a></li>
 
-                <li><a onclick="SmartHref('Login')">Login</a></li>
+                <li><a id="LoginATag3" onclick="LogInOut(); SmartHref('Login')">Login</a></li>
 
                 <li id="ManageLink2"><a onclick="SmartHref('Manage')">Manage</a></li>
 
