Added checkout btn

--- a/Wacky/About/index.html
+++ b/Wacky/About/index.html
@@ -43,7 +43,7 @@
 
                     <li><a class="CurrentlyOn" onclick="SmartHref('About')">About</a></li>
 
-                    <li id="CheckoutBtn"><a onclick="SmartCheckout()">Checkout</a></li>
+                    <li class="CheckoutBtn"><a onclick="SmartCheckout()">Checkout</a></li>
 
                     <li id="ManageLink"><a onclick="SmartHref('Manage')">Manage</a></li>
 
@@ -71,7 +71,7 @@
 
                 <li><a class="CurrentlyOn" onclick="SmartHref('About')">About</a></li>
 
-                <li id="CheckoutBtn"><a onclick="SmartCheckout()">Checkout</a></li>
+                <li class="CheckoutBtn"><a onclick="SmartCheckout()">Checkout</a></li>
 
                 <li id="ManageLink2"><a onclick="SmartHref('Manage')">Manage</a></li>
 
