--- a/Wacky/Checkout/index.html
+++ b/Wacky/Checkout/index.html
@@ -36,7 +36,7 @@
 
                     <li><a onclick="SmartHref('About')">About</a></li>
 
-                    <li id="CheckoutBtn"><a class="CurrentlyOn" onclick="SmartCheckout()">Checkout</a></li>
+                    <li class="CheckoutBtn"><a class="CurrentlyOn" onclick="SmartCheckout()">Checkout</a></li>
 
                     <li id="ManageLink"><a onclick="SmartHref('Manage')">Manage</a></li>
 
@@ -64,7 +64,7 @@
 
                 <li><a onclick="SmartHref('About')">About</a></li>
 
-                <li id="CheckoutBtn"><a class="CurrentlyOn" onclick="SmartCheckout()">Checkout</a></li>
+                <li class="CheckoutBtn"><a class="CurrentlyOn" onclick="SmartCheckout()">Checkout</a></li>
 
                 <li id="ManageLink2"><a onclick="SmartHref('Manage')">Manage</a></li>
 
