--- a/Wacky/Home/index.html
+++ b/Wacky/Home/index.html
@@ -42,7 +42,7 @@
 
                     <li><a onclick="SmartHref('About')">About</a></li>
 
-                    <li id="CheckoutBtn"><a onclick="SmartCheckout()">Checkout</a></li>
+                    <li class="CheckoutBtn"><a onclick="SmartCheckout()">Checkout</a></li>
 
                     <li id="ManageLink"><a onclick="SmartHref('Manage')">Manage</a></li>
 
@@ -70,7 +70,7 @@
 
                 <li><a onclick="SmartHref('About')">About</a></li>
 
-                <li><a onclick="SmartCheckout()">Checkout</a></li>
+                <li class="CheckoutBtn"><a onclick="SmartCheckout()">Checkout</a></li>
 
                 <li id="ManageLink2"><a onclick="SmartHref('Manage')">Manage</a></li>
 
