--- a/Wacky/Manage/index.html
+++ b/Wacky/Manage/index.html
@@ -40,7 +40,7 @@
 
                     <li><a onclick="SmartHref('About')">About</a></li>
 
-                    <li id="CheckoutBtn"><a onclick="SmartCheckout()">Checkout</a></li>
+                    <li class="CheckoutBtn"><a onclick="SmartCheckout()">Checkout</a></li>
 
                     <li id="ManageLink"><a class="CurrentlyOn" onclick="SmartHref('Manage')">Manage</a></li>
 
@@ -68,7 +68,7 @@
 
                 <li><a onclick="SmartHref('About')">About</a></li>
 
-                <li id="CheckoutBtn"><a onclick="SmartCheckout()">Checkout</a></li>
+                <li class="CheckoutBtn"><a onclick="SmartCheckout()">Checkout</a></li>
 
                 <li id="ManageLink2"><a class="CurrentlyOn" onclick="SmartHref('Manage')">Manage</a></li>
 
