--- a/Wacky/Menu/index.html
+++ b/Wacky/Menu/index.html
@@ -36,7 +36,7 @@
 
                     <li><a onclick="SmartHref('About')">About</a></li>
 
-                    <li id="CheckoutBtn"><a onclick="SmartCheckout()">Checkout</a></li>
+                    <li class="CheckoutBtn"><a onclick="SmartCheckout()">Checkout</a></li>
 
                     <li id="ManageLink"><a onclick="SmartHref('Manage')">Manage</a></li>
 
@@ -64,8 +64,8 @@
 
                 <li><a onclick="SmartHref('About')">About</a></li>
 
-                <li id="CheckoutBtn"><a onclick="SmartCheckout()">Checkout</a></li>
-
+                <li class="CheckoutBtn"><a onclick="SmartCheckout()">Checkout</a></li>
+                
                 <li id="ManageLink2"><a onclick="SmartHref('Manage')">Manage</a></li>
 
                 <li><a id="logInOutButton2" onclick="LogInOut(); SmartHref('Login')">Login</a></li>
@@ -107,6 +107,7 @@
                 <li><a class="CurrentlyOn" onclick="SmartHref('Menu')">Menu</a></li>
 
                 <li><a onclick="SmartHref('About')">About</a></li>
+                
 
                 <li><a id="LoginATag3" onclick="LogInOut(); SmartHref('Login')">Login</a></li>
 
