--- a/Wacky/Account/index.html
+++ b/Wacky/Account/index.html
@@ -41,7 +41,7 @@
 
                     <li><a onclick="SmartHref('About')">About</a></li>
 
-                    <li id="CheckoutBtn"><a onclick="SmartCheckout()">Checkout</a></li>
+                    <li class="CheckoutBtn"><a onclick="SmartCheckout()">Checkout</a></li>
 
                     <li id="ManageLink"><a onclick="SmartHref('Manage')">Manage</a></li>
 
@@ -69,7 +69,7 @@
 
                 <li><a onclick="SmartHref('About')">About</a></li>
 
-                <li id="CheckoutBtn"><a onclick="SmartCheckout()">Checkout</a></li>
+                <li class="CheckoutBtn"><a onclick="SmartCheckout()">Checkout</a></li>
 
                 <li id="ManageLink2"><a onclick="SmartHref('Manage')">Manage</a></li>
 
