--- a/Wacky/Login/index.html
+++ b/Wacky/Login/index.html
@@ -35,7 +35,7 @@
 
                     <li><a onclick="SmartHref('About')">About</a></li>
 
-                    <li id="CheckoutBtn"><a onclick="SmartCheckout()">Checkout</a></li>
+                    <li class="CheckoutBtn"><a onclick="SmartCheckout()">Checkout</a></li>
 
                     <li id="ManageLink"><a onclick="SmartHref('Manage')">Manage</a></li>
 
@@ -63,7 +63,7 @@
 
                 <li><a onclick="SmartHref('About')">About</a></li>
 
-                <li id="CheckoutBtn"><a onclick="SmartCheckout()">Checkout</a></li>
+                <li class="CheckoutBtn"><a onclick="SmartCheckout()">Checkout</a></li>
 
                 <li id="ManageLink2"><a onclick="SmartHref('Manage')">Manage</a></li>
 
