Fixed footer for login button to make it selected

--- a/Wacky/Login/index.html
+++ b/Wacky/Login/index.html
@@ -105,7 +105,7 @@
 
                 <li><a onclick="SmartHref('About')">About</a></li>
 
-                <li><a id="LoginATag3" onclick="LogInOut(); SmartHref('Login')">Login</a></li>
+                <li><a class="CurrentlyOn" id="LoginATag3" onclick="LogInOut(); SmartHref('Login')">Login</a></li>
 
                 <li id="ManageLink2"><a onclick="SmartHref('Manage')">Manage</a></li>
 
