--- a/Wacky/Receipt/index.html
+++ b/Wacky/Receipt/index.html
@@ -24,7 +24,7 @@
 
             </div>
 
-            <h1><a class="HH1">W</a><a class="HH2">a</a><a class="HH3">c</a><a class="HH4">k</a><a class="HH5">y</a> <a class="HH6">B</a><a class="HH7">u</a><a class="HH8">r</a><a class="HH9">g</a><a class="HH10">e</a><a class="HH11">r</a></h1>
+            <h1><a class="HH1" onclick="SmartHref('Home')">W</a><a class="HH2" onclick="SmartHref('Home')">a</a><a class="HH3" onclick="SmartHref('Home')">c</a><a class="HH4" onclick="SmartHref('Home')">k</a><a class="HH5" onclick="SmartHref('Home')">y</a> <a class="HH6" onclick="SmartHref('Home')">B</a><a class="HH7" onclick="SmartHref('Home')">u</a><a class="HH8" onclick="SmartHref('Home')">r</a><a class="HH9" onclick="SmartHref('Home')">g</a><a class="HH10" onclick="SmartHref('Home')">e</a><a class="HH11" onclick="SmartHref('Home')">r</a></h1>
 
             <nav>
 
