updated about and home

--- a/Wacky/Home/index.html
+++ b/Wacky/Home/index.html
@@ -85,12 +85,14 @@
         <article>
 
             <section id="hero">
-                <img src="../../images/Wacky_Burger_Character_Logo-transparent.png" width="30%" alt="WackymanBurgerguyTheWackestOfHistoryAndTheWackestOfToday. xXWackyGamerBurgerIsSoSimga67AlphaPackgod21Xx">
+                <img src="../../images/wacky-burger-interior.jpeg" alt="WackymanBurgerguyTheWackestOfHistoryAndTheWackestOfToday. xXWackyGamerBurgerIsSoSimga67AlphaPackgod21Xx">
 
-                <h1>Welcome to Wacky Burger</h1>
+                <div class="heroText">
+                    <h1>Welcome to Wacky Burger</h1>
 
-                <p><blockquote>Food that satisfies your wacky needs.</blockquote></p>
-
+                    <p><blockquote>Food that satisfies your wacky needs.</blockquote></p>
+                </div>
+                
 
             </section>
 
