--- a/Wacky/About/index.html
+++ b/Wacky/About/index.html
@@ -114,7 +114,7 @@
                             <h3>How It Started</h3>
 
                             <br>
-                            <img src="../../images/Wacky_Burger_Character_Logo-transparent.png" width="30%" alt="Wacky Burger Logo">
+                            <img src="../../images/wacky-burger-restaurant.png" width="50%" alt="Wacky Burger Logo">
 
                             <br>
 
@@ -140,18 +140,18 @@
 
                             <br>
 
-                            <img src="../../images/manager-headshot.png" width="30%" alt="Founder">
+                            <img src="../../images/manager-realistic.jpeg" width="50%" alt="Founder">
 
                             <br>
 
                             <p style="width: 75%; justify-self: center;">
-                                The founder grew up in texas.
-                                Family grilled outside alot,
-                                Making the best burgers he has ever eaten.
+                                The founder grew up in texas,
+                                where his family grilled outside often,
+                                making the best burgers he had ever eaten.
                                 <br>
                                 <br>
-                                Eventually he grew older. Dawned a cowboy hat.
-                                And wanted to make the burger he grew up with.
+                                Eventually he grew older, donned a cowboy hat,
+                                and wanted to make the burger he grew up with.
                                 He wanted to share his knowledge, the taste,
                                 and wackyness that a burger can have.
                             </p>
