Updated about page world domination section

--- a/Wacky/About/index.html
+++ b/Wacky/About/index.html
@@ -267,7 +267,13 @@
 
                         </div>
 
+                        <h3>Our Path to World Domination</h3>
 
+                        <div id="pathImages">
+                            <img src="../../images/city-taken-over.jpeg">
+                            <img src="../../images/world-taken-over.png">
+                            <img src="../../images/moon-flag.png">
+                        </div>
 
                     </div>
 
